[package]
name = "mlkem_wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "=0.2.92"

ml-kem = { version = "0.2", default-features = false }
hkdf = "0.12"
sha2 = "0.10"
base64 = "0.21"
getrandom = { version = "0.2", features = ["js"] }
rand_core = { version = "0.6", features = ["getrandom"] }
js-sys = "=0.3.69"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O3"]